--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Floatyz</title>
+		<title>Visible Friends</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap-side-modals.css" rel="stylesheet">
 		<link href="css/fontawesome.min.css" rel="stylesheet">
