--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						</ul>
 						<hr>
 						<ul class="social-list">
-							<li><a href="https://discord.com/visiblefriends" target="_blank"><img src="images/mask.svg" alt="." /> Discord</a></li>
+							<li><a href="http://discord.gg/visiblefriends" target="_blank"><img src="images/mask.svg" alt="." /> Discord</a></li>
 							<li><a href="https://twitter.com/vsblefriendsnft" target="_blank"><img src="images/twitter.svg" alt="." /> Twitter</a></li>
 							<li><a href="" target="_blank"><img src="images/magiceden.svg" alt="." />Magic Eden</a> </li>
 						</ul>
@@ -74,7 +74,7 @@
 					</ul>
 					<form class="form-inline mt-2 mt-md-0">
 						<ul class="social-list">
-							<li><a href="https://discord.com/visiblefriends" target="_blank"><img src="images/mask.svg" alt="."  /></a></li>
+							<li><a href="http://discord.gg/visiblefriends" target="_blank"><img src="images/mask.svg" alt="."  /></a></li>
 							<li><a href="https://twitter.com/vsblefriendsnft" target="_blank"><img src="images/twitter.svg" alt="." /></a></li>
 							<li><a href="" target="_blank"><img src="images/magiceden.svg" alt="."  /></a></li>
 						</ul>
